syntax = "proto3";

import "google/protobuf/struct.proto";

option csharp_namespace = "FluxConfig.Storage.Api.GrpcContracts.Internal";

package storage.internal.v1;

service Storage {
  rpc LoadVaultConfig (LoadConfigRequest) returns (LoadConfigResponse);

  rpc LoadRealTimeConfig (LoadConfigRequest) returns (LoadConfigResponse);
  
  rpc UpdateVaultConfig (UpdateConfigRequest) returns (UpdateConfigResponse);
  
  rpc UpdateRTConfig (UpdateConfigRequest) returns (UpdateConfigResponse);
  
  rpc CreateServiceConfiguration (CreateServiceConfigRequest) returns (CreateServiceConfigResponse);
  
  rpc DeleteServiceConfiguration (DeleteServiceConfigRequest) returns (DeleteServiceConfigResponse);
  
  rpc ChangeServiceConfigurationTag (ChangeConfigurationTagRequest) returns (ChangeConfigurationTagResponse);
}

message LoadConfigRequest {
  string configuration_key = 1;
  string configuration_tag = 2;
}

message LoadConfigResponse {
  google.protobuf.Value configuration_data = 1;
}


message UpdateConfigRequest {
  string configuration_key = 1;
  string configuration_tag = 2;
  google.protobuf.Value configuration_data = 3;
}

message UpdateConfigResponse {
  
}

message CreateServiceConfigRequest {
  string configuration_key = 1;
  string configuration_tag = 2;
}

message CreateServiceConfigResponse {
  
}

message DeleteServiceConfigRequest {
  string configuration_key = 1;
  repeated string configuration_tags = 2;
}

message DeleteServiceConfigResponse {
}

message ChangeConfigurationTagRequest {
  string configuration_key = 1;
  string old_configuration_tag = 2;
  string new_configuration_tag = 3;
}

message ChangeConfigurationTagResponse {
}
